[package]
authors = ["antoniomuso <antoniomusolino007@gmail.com>"]
edition = "2021"
name    = "lz4-napi"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
lz4_flex    = { version = "0.11.3" }
napi        = "2"
napi-derive = "2"

[target.'cfg(all(any(windows, unix), target_arch = "x86_64", not(target_env = "musl")))'.dependencies]
mimalloc = { version = "0.1" }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
codgen-units = 1
lto          = true
