[package]
authors = ["antoniomuso <antoniomusolino007@gmail.com>"]
edition = "2021"
name    = "lz4-napi"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
lz4_flex    = { version = "0.11.3" }
napi        = { version = "3.0.0", features = ["napi5", "serde-json"] }
napi-derive = { version = "3.0.0" }

[target.'cfg(all(not(target_os = "linux"), not(target_family = "wasm")))'.dependencies]
mimalloc-safe = { version = "0.1", features = ["skip_collect_on_exit"] }

[target.'cfg(all(target_os = "linux", not(target_env = "ohos"), not(target_env = "musl")))'.dependencies]
mimalloc-safe = { version = "0.1", features = ["local_dynamic_tls", "skip_collect_on_exit"] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
codgen-units = 1
lto          = true
